# mayacorp_crm

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 20260301_0001_initial_central.py  20260301_0002_central_refresh_tokens.py  20260301_0003_tenant_analytics_snapshots.py  20260301_0004_central_missing_tables.py  20260303_0005_company_accounts.py  20260303_0006_addons_is_active.py
app/: __init__.py  bootstrap.py  main.py  panel_accounts_router.py  panel_auth_router.py  panel_catalog_router.py  panel_common.py  panel_crm_router.py  panel_finance_router.py  panel_router.py  panel_summary_queries.py  panel_summary_router.py  panel_summary_serializers.py  panel_whatsapp_router.py
app/api/: deps.py  routes.py
app/core/: config.py  middleware.py  security.py
app/db/: base.py  session.py
app/models/: central.py  tenant.py
app/schemas/: auth.py  crm.py  tenant.py
app/services/: auth.py  bootstrap.py  storage.py  tenant_auth.py  tenant_migrations.py  tenant_schema.py  tenants.py
app/services/tenant_migrations/: __init__.py  registry.py  v2026_03_01_1.py  v2026_03_01_2.py  v2026_03_01_3.py  (+2 more)
app/static/: admin_panel.css  admin_panel.js  admin_panel_actions.js  admin_panel_constants.js  admin_panel_render.js  admin_panel_shared.js
app/templates/: admin_panel.html  mayacorp_crm.service
deploy/: nginx.mayacorp_crm.conf
docs/: api-usage.md  deploy.md  postgres-secondary-instance.md  tenant-migrations.md
docs/modules/: ai.md  crm.md  finance.md  whatsapp.md
scripts/: api_client.py
tests/: test_app.py
